<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F0CA"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/result"
        android:text="@string/text_solution"
        android:textAlignment="textEnd"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons_layout"
        android:text="@string/text_result"
        android:textAlignment="textEnd"
        android:textSize="80sp" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="#E1AA74"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_c"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:backgroundTint="#192655"
                android:text="@string/button_c"
                android:textSize="24sp"
                app:cornerRadius="32sp"
                tools:ignore="ExtraText" />

            <Button
                android:id="@+id/button_openedBracket"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#192655"
                android:text="@string/button_openedBracket"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

            <Button
                android:id="@+id/button_closedBracket"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#192655"
                android:text="@string/button_closedBracket"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

            <Button
                android:id="@+id/button_div"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#192655"
                android:text="@string/button_div"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3876BF"
                android:text="@string/button_7"
                android:textSize="32sp"
                app:cornerRadius="32dp"
                tools:ignore="ExtraText" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3876BF"
                android:text="@string/button_8"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3876BF"
                android:text="@string/button_9"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

            <Button
                android:id="@+id/button_mul"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#192655"
                android:text="@string/button_mul"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3876BF"
                android:text="@string/button_4"
                android:textSize="32sp"
                app:cornerRadius="32dp"
                tools:ignore="ExtraText" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3876BF"
                android:text="@string/button_5"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3876BF"
                android:text="@string/button_6"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

            <Button
                android:id="@+id/button_add"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#192655"
                android:text="@string/button_add"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3876BF"
                android:text="@string/button_1"
                android:textSize="32sp"
                app:cornerRadius="32dp"
                tools:ignore="ExtraText" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3876BF"
                android:text="@string/button_2"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3876BF"
                android:text="@string/button_3"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

            <Button
                android:id="@+id/button_sub"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#192655"
                android:text="@string/button_sub"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_AC"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="9dp"
                android:backgroundTint="#192655"
                android:text="@string/button_AC"
                android:textSize="18sp"
                app:cornerRadius="32dp"
                tools:ignore="ExtraText" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#3876BF"
                android:text="@string/button_0"
                android:onClick="btn00Click"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#192655"
                android:text="@string/button_dot"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

            <Button
                android:id="@+id/button_equalsto"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#192655"
                android:text="@string/button_equalsto"
                android:textSize="32sp"
                app:cornerRadius="32dp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>